# ImuAHRS

./: CMakeLists.txt  README.md  comparison_9dof.csv  plot_comparison.py
include/: ImuData.h  MadgwickAHRS.h  QuaternionUtils.h
src/: ImuData.cpp  MadgwickAHRS.cpp
test/: compare_ahrs.cpp  test_ahrs.cpp
